# systems

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  default.profraw
NullOS/: .gitignore  BUILD.md  CLAUDE.md  Makefile  README.md  linker.ld
augmented-reality/: CLAUDE.md  README.md
bittorrent/: CLAUDE.md  Cargo.toml
bots/: .gitignore  CLAUDE.md  README.md
container-runtime/: CLAUDE.md  Cargo.toml  README.md
container-runtime/src/: cgroup.rs  container.rs  filesystem.rs  image.rs  main.rs  namespace.rs  network.rs
container-runtime/tests/: integration.rs
debugger/: .gitignore  CLAUDE.md  DONE.txt  Makefile  README.md  better_demo.txt  debugger  debugger.cpp  debugger.h  demo.sh  demo_input.txt  demo_session.txt  main.cpp  test.c  test_prog
emulator/: CLAUDE.md  Makefile  README.md  chip8
game/: Makefile  README.md
jot/: CLAUDE.md  README.md
jot/piper/: CLAUDE.md  README.md  pyproject.toml
jot/piper/piper/: agent.py  cli.py  config.py
jot/piper/piper/llm/: arthur.py  base.py
jot/piper/piper/tools/: __init__.py  base.py  bash.py  edit.py  glob_tool.py  grep.py  read.py  write.py
memory-allocator/: CLAUDE.md  Makefile  README.md
nullC/: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  convert_to_arm64.py  final_arm64_fix.py  fix_arm64_syntax.py  hello  index.html
processor/: CLAUDE.md  Makefile  README.md  cpu
profiler/: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CLAUDE.md  COMPLETION_REPORT.txt  INDEX.md  Makefile  QUICKSTART.md  README.md  build.sh  example_usage.py  libprofiler.dylib  profiler.c  (+3 more)
(+274 files in other folders)
